# pyWC

./: .gitignore  404.html  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GITHUB_PAGES_SETUP.md  README.md  README.rst  benchmark_centering.py  benchmark_gpu_centering.py  example_backend_usage.py  example_detailed_timing.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  test_all_backends.py  test_backend_comparison.py  test_backend_trace.py  test_centering_diagnostic.py  test_gpu_centering.py  test_real_system_diagnostic.py  test_warmup_effect.py
.circleci/: config.yml
.claude/: settings.local.json
.github/workflows/: docs.yml  python-package.yml
api/backends/: index.html
api/willard_chandler/: index.html
benchmarks/: willard_chandler_kde.py
citation/: index.html
cli-tools/: index.html
compute_wc_area/: index.html
contributing/: index.html
docs/: README.md  citation.md  cli-tools.md  compute_wc_area.md  contributing.md  examples.md  index.md  installation.md  quickstart.md  requirements.txt
docs/api/: backends.md  willard_chandler.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
documentation_backup/: BACKEND_OPTIONS_GUIDE.md  BACKEND_TIMING_CHANGES.md  CENTERING_OPTIMIZATION_RESULTS.md  CENTER_OPTIMIZATION_ANALYSIS.md  CENTER_PYBIND11_GUIDE.md  CHANGELOG.md  DETAILED_TIMING_GUIDE.md  GPU_CENTERING_GUIDE.md  OPTIMIZATION_FINAL_RESULTS.md  README.md  README.rst  SCRIPTS_INSTALLATION.md  TIMING_FIX_EXPLANATION.md  TIMING_OPTIONS_WC_AREA.md  TIMING_QUICK_REFERENCE.md
documentation_backup/docs/source/: quick.rst
examples/: index.html
installation/: index.html
pytim/: __init__.py  _center_impl.py  _wc_kde.cpp  center_fast.cpp  center_fast_full.cpp  gaussian_kde_pbc.py  interface.py  utilities.py  version.py  willard_chandler.py
pytim.egg-info/: PKG-INFO
pytim/wc_core/: __init__.py  density.py  surface.py
pywc/: __init__.py  _center_impl.py  center_fast.cpp  center_gpu.py  cube.py  gaussian_kde_pbc.py  interface.py  patches.py  properties.py  sanity_check.py  utilities.py  utilities_dbscan.py  utilities_geometry.py  version.py  vtk.py  wavefront_obj.py  willard_chandler.py  writepdb.py
pywc/data/: .LJ.short.xtc_offsets.npz  .trj_test.xtc_offsets.npz  .water.xtc_offsets.npz  npt_run.tpr  selection.txt
pywc/datafiles/: __init__.py  __init__old1.py
pywc/wc_core/: density.py  gpu.py  grid.py  surface.py
quickstart/: index.html
scripts/: __init__.py  compare_cpu_gpu.py  compute_bending_rigidity.py  compute_willard_chandler_area.py  compute_willard_chandler_area_fixed.py
search/: search_index.json
