[build-system]
# scipy and numpy are required to build the cython extensions
requires = [
  "setuptools>=61.0",
  "wheel",
  "Cython",
  "numpy",
  "scipy",
  "pybind11>=2.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytim"
version = "1.0.4"                                              # Loaded from pytim/version.py in setup.py
description = "Python Tool for Interfacial Molecules Analysis"
readme = "README.rst"
requires-python = ">=3.10"
license = "GPL-3.0-only"

authors = [
  { name = "Marcello Sega", email = "m.sega@ucl.ac.uk" },
  { name = "Balazs Fabian" },
  { name = "Gyorgy Hantal" },
  { name = "Pal Jedlovszky" },
]

maintainers = [{ name = "Marcello Sega", email = "m.sega@ucl.ac.uk" }]

keywords = ["molecular", "simulations", "analysis"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "numpy>=2.1.3",
  "scipy>=1.11.3",
  "scikit-image>=0.24.0",
  "MDAnalysis>=2.8.0",
  "packaging>=23.0",
]

[project.optional-dependencies]
gpu = ["cupy>=12.0"]
dev = ["nose>=1.3.7", "coverage"]

[project.urls]
Homepage = "https://github.com/Marcello-Sega/pytim"
Source = "https://github.com/Marcello-Sega/pytim"
BugTracker = "https://github.com/Marcello-Sega/pytim/issues"

[project.scripts]
pytim-compare-wc-backends = "scripts.compare_cpu_gpu:main"
pytim-wc-area = "scripts.compute_willard_chandler_area:cli"
pytim-bending-rigidity = "scripts.compute_bending_rigidity:cli"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pytim*", "scripts*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"pytim" = ["data/*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-rA --doctest-modules"
testpaths = ["pytim/**/*.py"]
