[build-system]
# scipy and numpy are required to build the cython extensions
requires = [
  "setuptools>=61.0",
  "wheel",
  "Cython",
  "numpy",
  "scipy",
  "pybind11>=2.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyWC"
version = "1.0.4+wc"                                          # Loaded from pywc/version.py in setup.py
description = "Membrane interface analysis toolkit: Willard-Chandler surfaces, thickness profiles, and bending rigidity for MD simulations (optimized fork of pytim)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}

# Original pytim authors (this is a fork of pytim)
authors = [
  { name = "Marcello Sega", email = "m.sega@ucl.ac.uk" },
  { name = "Balazs Fabian" },
  { name = "Gyorgy Hantal" },
  { name = "Pal Jedlovszky" },
]

# Current maintainer of pyWC fork
maintainers = [{ name = "Massimo Marchi", email = "massimo@octupole.org" }]

keywords = [
  "molecular-dynamics",
  "surface-analysis",
  "willard-chandler",
  "intrinsic-surfaces",
  "computational-chemistry",
  "biophysics",
  "membrane-analysis",
  "GPU-acceleration",
  "high-performance"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Programming Language :: Cython",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "numpy>=2.1.3",
  "scipy>=1.11.3",
  "scikit-image>=0.24.0",
  "MDAnalysis>=2.8.0",
  "packaging>=23.0",
]

[project.optional-dependencies]
gpu = ["cupy>=12.0"]
dev = ["nose>=1.3.7", "coverage"]

[project.urls]
Homepage = "https://github.com/octupole/pyWC"
Repository = "https://github.com/octupole/pyWC"
Source = "https://github.com/octupole/pyWC"
BugTracker = "https://github.com/octupole/pyWC/issues"
"Original Project (pytim)" = "https://github.com/Marcello-Sega/pytim"
"pytim Paper" = "https://doi.org/10.1002/jcc.25384"
"Willard-Chandler Paper" = "https://doi.org/10.1021/jp909219k"

[project.scripts]
pywc-compare-wc-backends = "scripts.compare_cpu_gpu:main"
pywc-wc-area = "scripts.compute_willard_chandler_area:cli"
pywc-bending-rigidity = "scripts.compute_bending_rigidity:cli"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pywc*", "scripts*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"pywc" = ["data/*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-rA --doctest-modules"
testpaths = ["pywc/**/*.py"]
